@@ -36,6 +36,7 @@
 #' @param hints Logical, if \code{TRUE} and you leave out optional entries (like \code{technical=NULL}), empty dummy sections will be added.
 #' @param gen.info Logical, if \code{TRUE} a comment note will be written into the document,
 #'    that it was generated by \code{rkwarddev} and changes should be done to the script.
+#' @param lang Character string, the language of the help page. See \code{\link[rkwarddev:i18n]{i18n}} for details.
 #' @return An object of class \code{XiMpLe.doc}.
 #' @seealso
 #'    \code{\link[rkwarddev:rk.rkh.summary]{rk.rkh.summary}},
@@ -47,7 +48,7 @@
 #'    and the \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 #' @export
 
-rk.rkh.doc <- function(summary=NULL, usage=NULL, sections=NULL, settings=NULL, related=NULL, technical=NULL, title=NULL, hints=TRUE, gen.info=TRUE){
+rk.rkh.doc <- function(summary=NULL, usage=NULL, sections=NULL, settings=NULL, related=NULL, technical=NULL, title=NULL, hints=TRUE, gen.info=TRUE, lang=rk.get.language()){
 
   all.children <- list()
 
@@ -162,7 +163,13 @@ rk.rkh.doc <- function(summary=NULL, usage=NULL, sections=NULL, settings=NULL, r
     all.children[[length(all.children)+1]] <- rk.rkh.technical()
   } else {}
 
-  rkh.document <- XMLNode("document", .children=child.list(all.children, empty=FALSE))
+  # check for possible i18n
+  if(is.null(lang)){
+    lang.attrs <- NULL
+  } else {
+    lang.attrs <- list(lang=lang, "xml:lang"=lang)
+  }
+  rkh.document <- XMLNode("document", attrs=lang.attrs, .children=child.list(all.children, empty=FALSE))
 
   rkh.main <- XMLTree(rkh.document, dtd=list(doctype="rkhelp"))
 
