@@ -9,7 +9,8 @@ rk.plugin.skeleton(about, path = tempdir(), provides = c("logic", "dialog"),
   overwrite = FALSE, tests = TRUE, lazyLoad = TRUE, create = c("pmap",
   "xml", "js", "rkh", "desc", "clog"), suggest.required = TRUE,
   components = list(), dependencies = NULL, edit = FALSE, load = FALSE,
-  show = FALSE, gen.info = TRUE, hints = TRUE, indent.by = "\\t")
+  show = FALSE, gen.info = TRUE, hints = TRUE, indent.by = "\\t",
+  lang = rk.get.language())
 }
 \arguments{
 \item{about}{Either an object of class \code{XiMpLe.node} with descriptive information on the plugin and its authors
@@ -129,6 +130,9 @@ that they were generated by \code{rkwarddev} and changes should be done to the s
       if \code{TRUE} and you leave out optional entries (like \code{dependencies=NULL}), dummy sections will be added as comments.}
 
 \item{indent.by}{A character string defining the indentation string to use.}
+
+\item{lang}{Character string,
+      the language of the plugin. See \code{\link[rkwarddev:i18n]{i18n}} for details.}
 }
 \value{
 Character string with the path to the plugin root directory.
